# equipment_distributor

./: README.md  equipment.xlsx  gui.py  main.py  pyproject.toml  requirements.txt  test.ipynb  test.py
.github/workflows/: build.yml
school_models/: care.json  turtle.json  vertolet.json
